tests/error/modifier_errors/dagger_loop2.err
Error: Invalid expression in dagger (at $FILE:8:8)
  | 
6 | def test(i: int) -> None:
7 |     with dagger:
8 |         while i < 46:
  |         ^^^^^^^^^^^^^
9 |             pass
  | ^^^^^^^^^^^^^^^^ Loop found in a dagger context

Note:
  | 
6 | def test(i: int) -> None:
7 |     with dagger:
  |          ------ dagger modifier is used here

Help: Control flow statements (e.g. loops and branches) are not allowed in
daggered contexts.

Guppy compilation failed due to 1 previous error
